Update env vars
Signed-off-by: Domenic Barbuzzi <domenic@neuralmagic.com>

--- a/.github/workflows/inspection.yml
+++ b/.github/workflows/inspection.yml
@@ -6,12 +6,10 @@ jobs:
     runs-on: gcp-k8s-vllm-l4-solo
 
     steps:
-      - name: env var info
+      - name: update env vars
         run: |
-          echo "LD_LIBRARY_PATH: $LD_LIBRARY_PATH"
-          echo "PATH: $PATH"
-          echo "~/.bashrc:"
-          cat ~/.bashrc
+          echo "PATH=${PATH:+$PATH:}:/usr/local/cuda-12.4/lib64:/usr/local/nvidia/lib64" | tee -a "$GITHUB_ENV"
+          echo "LD_LIBRARY_PATH=${LD_LIBRARY_PATH:+$LD_LIBRARY_PATH:}/usr/local/cuda-12.4/lib64:/usr/local/nvidia/lib64" | tee -a "$GITHUB_ENV"
         shell: bash
 
       - uses: actions/setup-python@v5
