--- a/tests/lmeval/configs/vl_fp8_dynamic_per_token.yaml
+++ b/tests/lmeval/configs/vl_fp8_dynamic_per_token.yaml
@@ -1,8 +1,7 @@
 cadence: weekly
-model: Qwen/Qwen2-VL-2B-Instruct
-model_class: TraceableQwen2VLForConditionalGeneration
+model: Qwen/Qwen2.5-VL-7B-Instruct
+model_class: TraceableQwen2_5_VLForConditionalGeneration
 scheme: FP8_DYNAMIC
-seed: 42  # compressed model is sensitive to random seed
 lmeval:
   model: "hf-multimodal"
   model_args:
