--- a/.github/workflows/test-check-transformers.yaml
+++ b/.github/workflows/test-check-transformers.yaml
@@ -1,10 +1,5 @@
 name: Test Checks (Transformers)
-on:
-  pull_request:
-    branches: main
-    types: [ labeled, synchronize ]
-  push:
-    branches: main
+on: [push]
 
 env:
   CADENCE: "commit"
