updated tests with additional notes of results
Signed-off-by: Brian Dellabetta <bdellabe@redhat.com>

--- a/tests/lmeval/configs/vl_fp8_dynamic_per_token.yaml
+++ b/tests/lmeval/configs/vl_fp8_dynamic_per_token.yaml
@@ -11,5 +11,9 @@ lmeval:
   task: mmmu_val_economics
   num_fewshot: 0
   batch_size: 8
+  # dense model achieves 0.4 accuracy
+  # result is the same (0.333) with
+  #  "quantization_confg": CompressedTensorsConfig(run_compressed=False)
+  #  in model_args
   metrics:
     acc,none: 0.333
