--- a/tests/lmeval/configs/vl_w4a16_actorder_weight.yaml
+++ b/tests/lmeval/configs/vl_w4a16_actorder_weight.yaml
@@ -1,7 +1,7 @@
 cadence: "weekly"
-model: llava-hf/llava-1.5-7b-hf
-model_class: TraceableLlavaForConditionalGeneration
-recipe: tests/e2e/vLLM/recipes/actorder/recipe_w4a16_actorder_weight.yaml
+model: Qwen/Qwen2.5-VL-7B-Instruct
+model_class: TraceableQwen2_5_VLForConditionalGeneration
+recipe: tests/e2e/vLLM/recipes/actorder/recipe_w4a16_actorder_weight_dampfrac1e-1.yaml
 dataset_id: lmms-lab/flickr30k
 dataset_split: "test[:512]"
 scheme: W4A16_actorder_group
@@ -13,6 +13,10 @@ lmeval:
     convert_img_format: True
   task: mmmu_val_economics
   num_fewshot: 0
+  # dense model achieves 0.4 accuracy
+  # result is lower (0.366) with
+  #  "quantization_confg": CompressedTensorsConfig(run_compressed=False)
+  #  in model_args
   metrics:
-    acc,none: 0.233
+    acc,none: 0.4
   batch_size: 4
