--- a/tests/lmeval/configs/vl_fp8_dynamic_per_token.yaml
+++ b/tests/lmeval/configs/vl_fp8_dynamic_per_token.yaml
@@ -13,7 +13,7 @@ lmeval:
   batch_size: 8
   # dense model achieves 0.4 accuracy
   # result is the same (0.333) with
-  #  "quantization_confg": CompressedTensorsConfig(run_compressed=False)
+  #  "quantization_config": CompressedTensorsConfig(run_compressed=False)
   #  in model_args
   metrics:
     acc,none: 0.333
