--- a/tests/lmeval/configs/vl_int8_w8a8_dynamic_per_token.yaml
+++ b/tests/lmeval/configs/vl_int8_w8a8_dynamic_per_token.yaml
@@ -15,7 +15,7 @@ lmeval:
   num_fewshot: 0
   # dense model achieves 0.233 accuracy
   # result is the same (0.233) with
-  #  "quantization_confg": CompressedTensorsConfig(run_compressed=False)
+  #  "quantization_config": CompressedTensorsConfig(run_compressed=False)
   #  in model_args
   metrics:
     acc,none: 0.233
