--- a/tests/lmeval/configs/vl_w4a16_actorder_weight.yaml
+++ b/tests/lmeval/configs/vl_w4a16_actorder_weight.yaml
@@ -14,9 +14,9 @@ lmeval:
   task: mmmu_val_economics
   num_fewshot: 0
   # dense model achieves 0.4 accuracy
-  # result is lower (0.366) with
+  # result is the same (0.366) with
   #  "quantization_config": CompressedTensorsConfig(run_compressed=False)
   #  in model_args
   metrics:
-    acc,none: 0.4
+    acc,none: 0.366
   batch_size: 4
